[package]
name = "rasp_mgr"
version = "1.0.0"
description = "A simple server manager for local newtrok"
authors = ["PiyushXCoder <piyush.raj.kit@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/PiyushXCoder/Rasp-Manager"
keywords = ["server", "raspberry-pi", "raspberry"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
toml = "0.5.8"

tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }

humantime = "2.1.0"

sys-info = "0.9.0"
libc = "0.2.97"
mnt = "0.3.1"

libmedium = "0.6.0"
